# Jump-Rectangle

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/: tiles_packed_labelled.xcf
src/: guy.rs  input.rs  level.rs  main.rs  physics_object.rs  platformer.rs  portal.rs  state_transitions.rs  stuff.rs
