[package]
name = "platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# remember to disable "dynamic" feature before release
bevy = { version = "0.9", features = ["dynamic"] }
leafwing-input-manager = "0.7"
glob = "0.3.0"
iyes_loopless = "0.9"
bevy_prototype_debug_lines = "0.9"

# todo get rid of this
glam_vector_components = { git = "https://github.com/sullyj3/glam_vector_components" }
image = "0.24.4"
rand = "0.8.5"
